Fixed issues: card alignment, make action button direct user to useful videos search result on youtube and some minor stuffs.

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,15 @@
     text-align: justify;
 }
 
+.see-all-recipes-margin-top{
+    margin: 30px;
+}
+
+
 /* Utilities */
+.nowrap{
+    text-wrap: nowrap;
+}
 .bold{
     font-weight: bold;
 }
